--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link href="extras/style.css" rel="stylesheet" type ="text/css">  
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="extras/loadlogs.js"></script> 
+	<script src="extras/loadlogs.js"></script>
+	<meta name="viewport" content="width=device-width, user-scalable=no"> 
 </head>
 <body>
 	<div id="wrapper">
